# stm32f407-hal

./: Cargo.toml  README.md  memory.x
app/: Cargo.toml
app/src/: main.rs
stm32f407-hal/: Cargo.toml
stm32f407-hal/src/: _timer.rs  delay.rs  lib.rs  time.rs  timer.rs
stm32f407-hal/src/gpio/: alternate.rs  analog.rs  edge.rs  extipin.rs  gpio.rs  gpioext.rs  input.rs  mod.rs  output.rs  speed.rs
stm32f407-hal/src/prelude/: mod.rs  prelude.rs
stm32f407-hal/src/rcc/: cfgr.rs  clocks.rs  mod.rs  rcc.rs  rccext.rs
stm32f407-hal/src/serial/: mod.rs  serial.rs
stm32f407-hal/src/timer/: channel_impl.rs  error.rs  event.rs  hal.rs  mod.rs  timer.rs
