[package]
name = "app"
version = "0.1.0"
authors = ["win"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
panic-halt = "*"

stm32f407-hal = { path = "../stm32f407-hal" }

[dependencies.stm32f4]
features = ["stm32f407", "rt"]
version = "*"
