[package]
name = "stm32f407-hal"
version = "0.1.0"
authors = ["win"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
# embedded-hal = "*"

# stm32f407-rs = { path = "../stm32f407-rs" }

[dependencies.embedded-hal]
features = ["unproven"]
version = "*"

[dependencies.stm32f4]
features = ["stm32f407", "rt"]
version = "*"


[dependencies.cast]
version = "*"
default-features = false

[dependencies.void]
default-features = false
version = "*"